Just learned to add voice :D

--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Branching</title>
+    <title>Moving on same pages</title>
 </head>
+
 <body>
-    New branch contents
+    <h2>Table of Contents</h2>
+    <ul>
+        <li> <a href="#section1">Section 1</a> </li>
+        <li> <a href="#section2">Section 2</a> </li>
+        <li> <a href="#section3">Section 3</a> </li>
+    </ul>
+    <h2 id="section1">Section 1</h2>
+    <p>
+        Easily generate Lorem Ipsum placeholder text in any number of characters, words sentences or paragraphs. Learn
+        about the origins of the passage. Easily generate Lorem Ipsum placeholder text in any number of characters, words sentences or paragraphs. Learn
+        about the origins of the passage.
+    </p>
+
+    <h2 id="section2">Section 2</h2>
+    <p>
+        Easily generate Lorem Ipsum placeholder text in any number of characters, words sentences or paragraphs. Learn
+        about the origins of the passage. Easily generate Lorem Ipsum placeholder text in any number of characters, words sentences or paragraphs. Learn
+        about the origins of the passage.
+    </p>
+
+    <h2 id="section3">Section 3</h2>
+    <p>
+        Easily generate Lorem Ipsum placeholder text in any number of characters, words sentences or paragraphs. Learn
+        about the origins of the passage. Easily generate Lorem Ipsum placeholder text in any number of characters, words sentences or paragraphs. Learn
+        about the origins of the passage.
+    </p>
+    <audio controls>
+        <source src="lazy.mp3" type="audio/mp3">
+        Your browser does not support the audio tag.
+    </audio>
 </body>
+
 </html>
